# cv-scrapers

./: .gitignore  Makefile  docker-compose-kafka.yaml  docker-compose-rmq.yaml  example.local.env  pyproject.toml
app/: main.py
app/common/: parser_mixins.py
app/common/mixins/: parser_mixins.py
app/common/schemas/: candidates_result.py
app/consumers/: candidates_request_consumer.py  schemas.py
app/message_broker/base/: connection.py  consumer.py  publisher.py
app/message_broker/congif/: __init__.py  settings.py
app/rabotaua/config/: __init__.py
app/robotaua/: parsers.py  process_executor.py  scraper.py
app/robotaua/config/: __init__.py  settings.py
app/robotaua/schemas/: request.py  response.py
app/scrapers/base/: executor.py
app/scrapers/robotaua/: executor.py  parsers.py  scraper.py
app/scrapers/workua/: executor.py  parsers.py  scraper.py
app/workua/: parsers.py  process_executor.py  scraper.py
app/workua/config/: settings.py
app/workua/schemas/: schemas.py  validators.py
cv_scrapers/: main.py  registries.py
cv_scrapers/common/: enums.py  logger.py
cv_scrapers/common/schemas/: candidates_result.py  validators.py
cv_scrapers/consumers/: candidates_request_consumer.py  candidates_request_consumer_kafka.py  schemas.py
cv_scrapers/message_broker/base/: connection.py  consumer.py  publisher.py
cv_scrapers/message_broker/congif/: __init__.py  settings.py
cv_scrapers/producers/: candidate_result_producer.py  schemas.py
cv_scrapers/scrapers/: exceptions.py
cv_scrapers/scrapers/base/: executor.py
cv_scrapers/scrapers/robotaua/: executor.py  (+2 more)
tests/consumers/: test_candidates_request_consumer_kafka.py
tests/robotaua/: test_parsers.py  test_robotaua_parsers.py
tests/workua/: test_parsers.py  test_workua_parsers.py
(+17 files in other folders)
