[tool.poetry]
name = "cv_scrapers"
version = "0.1.0"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
lxml = "^4.9.3"
pydantic = "^2.4.2"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
